// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Candles search all candles between 2017-04-12 00:00:00 and 2017-04-12 23:59:59 should return all Candles correctly for each 1d 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T00:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
  ],
}
`;

exports[`Candles search all candles between 2017-04-12 00:00:00 and 2017-04-12 23:59:59 should return all Candles correctly for each 1h 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T00:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T01:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T02:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T03:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T04:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T05:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T06:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T07:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T08:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T09:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T10:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T11:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T12:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T13:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T14:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T15:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T16:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T17:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T18:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T19:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T20:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T21:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T22:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
    Object {
      "__type": "candle",
      "data": Object {
        "close": null,
        "high": null,
        "low": null,
        "maxHeight": null,
        "open": null,
        "quoteVolume": null,
        "time": "2017-04-12T23:00:00.000Z",
        "txsCount": 0,
        "volume": null,
        "weightedAveragePrice": null,
      },
    },
  ],
}
`;
